--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,17 @@
 [tool.poetry]
 name = "incolumepy.prospect.remove_bkgrounds"
-version = "0.1.0"
+version = "0.2.0-alpha.0"
 description = ""
 authors = ["Britodfbr <britodfbr@gmail.com>"]
+packages = [
+  {include='incolumepy', from=''}
+]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.8"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
