--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,10 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.11"
+easygui = "^0.98.3"
+rembg = "^2.0.25"
+Pillow = "^9.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.0"
