--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "incolumepy.prospect.remove_bkgrounds"
-version = "0.2.0-alpha.2"
+version = "0.2.0"
 description = ""
 authors = ["Britodfbr <britodfbr@gmail.com>"]
 packages = [
